# Clean-Code

./: .gitignore  annotations.py  byte_converter.py  pyproject.toml  response-clean.py
logging/: basic_logger.py  custom_logger.py  filter_logger.py  rotating_logger.py
search/: get_input.py  get_item.py  main.py  search.py  seek.py  store.py
