[project]
name = "search"
version = "0.1.0"
description = "a search module"
authors = [
    {name = "isaac-data-alchemy",email = "ejimoforsystemtech123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

